--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "hvac-ai",
   "version": "1.0.0",
@@ -9,7 +8,10 @@
   },
   "dependencies": {
     "next": "14.1.3",
+    "png-to-ico": "^2.1.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "18.2.0",
+    "sharp": "^0.34.2"
   }
 }
