--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "konva": "^9.3.20",
     "next": "14.1.3",
     "png-to-ico": "^2.1.8",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-konva": "^18.2.10",
     "sharp": "^0.34.2"
   }
 }
