--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.2.0",
+    "better-sqlite3": "^12.0.0",
+    "formidable": "^3.5.4",
     "konva": "^9.3.20",
     "next": "14.1.3",
     "png-to-ico": "^2.1.8",
@@ -14,6 +17,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-konva": "^18.2.10",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "tesseract.js": "^6.0.1"
   }
 }
